--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /.shards/
 *.dwarf
 
+# Development file to testing
+/src/dev.cr
+
 # Libraries don't need dependency lock
 # Dependencies will be locked in application that uses them
 /shard.lock
